--- a/Ceriyo.Content/Ceriyo.Content.csproj
+++ b/Ceriyo.Content/Ceriyo.Content.csproj
@@ -54,15 +54,27 @@
     <Folder Include="Scripts\Client\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="UI\Images\CeriyoLogo.png" />
+    <Content Include="UI\Images\DirectConnect.png" />
+    <Content Include="UI\Images\JoinServer.png" />
+    <Content Include="UI\Images\Settings.png" />
     <Content Include="Graphics\Tileset\Empty-Tileset.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Libraries\artemis.dll" />
-    <Content Include="UI\Images\CeriyoLogo.png" />
     <None Include="Compiled\Spritefonts\Segoe_UI_10_Regular.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Compiled\UI\Images\CeriyoLogo.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Compiled\UI\Images\DirectConnect.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Compiled\UI\Images\JoinServer.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Compiled\UI\Images\Settings.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="ResourcePacks\Default-Resources.rpk">
