--- a/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
+++ b/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Services\DataService.cs" />
     <Compile Include="Network\ServerNetworkService.cs" />
     <Compile Include="Services\ScriptService.cs" />
+    <Compile Include="UI\Generated\CharacterSelectionView.xaml.cs" />
+    <Compile Include="UI\Generated\CharacterSelectionView.xaml_bindings.cs" />
     <Compile Include="UI\Generated\Dictionary.xaml.cs" />
     <Compile Include="UI\Generated\Dictionary.xaml_bindings.cs" />
     <Compile Include="UI\Generated\DirectConnectView.xaml.cs" />
@@ -129,6 +131,7 @@
     <Compile Include="UI\Generated\SettingsView.xaml.cs" />
     <Compile Include="UI\Generated\SettingsView.xaml_bindings.cs" />
     <Compile Include="UI\UIService.cs" />
+    <Compile Include="UI\ViewModels\CharacterSelectionUIViewModel.cs" />
     <Compile Include="UI\ViewModels\DirectConnectUIViewModel.cs" />
     <Compile Include="UI\ViewModels\JoinServerUIViewModel.cs" />
     <Compile Include="UI\ViewModels\MainMenuUIViewModel.cs" />
