Added system loader, added max lengths on server name, description and announcement, added more comments, simplified OnConnected and OnDisconnected events, added logic to load module into memory for server

--- a/Ceriyo.Server.WPF/Ceriyo.Server.WPF.csproj
+++ b/Ceriyo.Server.WPF/Ceriyo.Server.WPF.csproj
@@ -159,8 +159,10 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Factory\ServerGameFactory.cs" />
     <Compile Include="Mapping\ServerObjectMapper.cs" />
+    <Compile Include="Screens\ServerScreen.cs" />
     <Compile Include="ServerGame.cs" />
     <Compile Include="ServerIOCConfig.cs" />
+    <Compile Include="ServerSystemLoader.cs" />
     <Compile Include="Services\ServerGameService.cs" />
     <Compile Include="Services\ServerSettingsService.cs" />
     <Compile Include="Views\ApplicationRootView\ApplicationRootViewModel.cs" />
