Stubbed out character creation

--- a/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
+++ b/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
@@ -107,9 +107,12 @@
     <Compile Include="Helpers\IOCHelpers.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Network\Contracts\INetworkPacket.cs" />
+    <Compile Include="Network\Packets\CharacterCreatedPacket.cs" />
     <Compile Include="Network\Packets\ConnectedToServerPacket.cs" />
     <Compile Include="Network\Packets\ConnectionRequestPacket.cs" />
+    <Compile Include="Network\Packets\CreateCharacterPacket.cs" />
     <Compile Include="Network\Packets\PacketBase.cs" />
+    <Compile Include="Network\TransferObjects\PCTransferObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Network\ClientNetworkService.cs" />
     <Compile Include="Network\Contracts\IClientNetworkService.cs" />
@@ -118,19 +121,9 @@
     <Compile Include="Services\DataService.cs" />
     <Compile Include="Network\ServerNetworkService.cs" />
     <Compile Include="Services\ScriptService.cs" />
-    <Compile Include="UI\Generated\CharacterSelectionView.xaml.cs" />
-    <Compile Include="UI\Generated\CharacterSelectionView.xaml_bindings.cs" />
-    <Compile Include="UI\Generated\Dictionary.xaml.cs" />
-    <Compile Include="UI\Generated\Dictionary.xaml_bindings.cs" />
-    <Compile Include="UI\Generated\DirectConnectView.xaml.cs" />
-    <Compile Include="UI\Generated\DirectConnectView.xaml_bindings.cs" />
-    <Compile Include="UI\Generated\JoinServerView.xaml.cs" />
-    <Compile Include="UI\Generated\JoinServerView.xaml_bindings.cs" />
-    <Compile Include="UI\Generated\MainMenuView.xaml.cs" />
-    <Compile Include="UI\Generated\MainMenuView.xaml_bindings.cs" />
-    <Compile Include="UI\Generated\SettingsView.xaml.cs" />
-    <Compile Include="UI\Generated\SettingsView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\*.cs" />
     <Compile Include="UI\UIService.cs" />
+    <Compile Include="UI\ViewModels\CharacterCreationUIViewModel.cs" />
     <Compile Include="UI\ViewModels\CharacterSelectionUIViewModel.cs" />
     <Compile Include="UI\ViewModels\DirectConnectUIViewModel.cs" />
     <Compile Include="UI\ViewModels\JoinServerUIViewModel.cs" />
