--- a/Ceriyo.Tools.UIGenerator/Ceriyo.Tools.UIGenerator.csproj
+++ b/Ceriyo.Tools.UIGenerator/Ceriyo.Tools.UIGenerator.csproj
@@ -136,6 +136,10 @@
       <Project>{13AA8344-A9A0-4E9C-BA97-3441A85AD8C4}</Project>
       <Name>Ceriyo.Infrastructure.WPF</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Ceriyo.Infrastructure\Ceriyo.Infrastructure.csproj">
+      <Project>{BBC7E2F5-D48A-424A-8DF1-3633387FD137}</Project>
+      <Name>Ceriyo.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="UserControls\" />
