--- a/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
+++ b/Ceriyo.Infrastructure/Ceriyo.Infrastructure.csproj
@@ -125,7 +125,28 @@
     <Compile Include="Services\DataService.cs" />
     <Compile Include="Network\ServerNetworkService.cs" />
     <Compile Include="Services\ScriptService.cs" />
-    <Compile Include="UI\Generated\*.cs" />
+    <Compile Include="UI\Generated\CharacterCreationView.xaml.cs" />
+    <Compile Include="UI\Generated\CharacterCreationView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\CharacterSelectionView.xaml.cs" />
+    <Compile Include="UI\Generated\CharacterSelectionView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\ConfirmationWindow.xaml.cs" />
+    <Compile Include="UI\Generated\ConfirmationWindow.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\Dictionary.xaml.cs" />
+    <Compile Include="UI\Generated\Dictionary.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\DirectConnectView.xaml.cs" />
+    <Compile Include="UI\Generated\DirectConnectView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\GameView.xaml.cs" />
+    <Compile Include="UI\Generated\GameView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\HotBarControl.xaml.cs" />
+    <Compile Include="UI\Generated\HotBarControl.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\HotBarView.xaml.cs" />
+    <Compile Include="UI\Generated\HotBarView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\JoinServerView.xaml.cs" />
+    <Compile Include="UI\Generated\JoinServerView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\MainMenuView.xaml.cs" />
+    <Compile Include="UI\Generated\MainMenuView.xaml_bindings.cs" />
+    <Compile Include="UI\Generated\SettingsView.xaml.cs" />
+    <Compile Include="UI\Generated\SettingsView.xaml_bindings.cs" />
     <Compile Include="UI\UIService.cs" />
     <Compile Include="UI\ViewModels\CharacterCreationUIViewModel.cs" />
     <Compile Include="UI\ViewModels\CharacterSelectionUIViewModel.cs" />
