--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Components\Velocity.cs" />
     <Compile Include="Constants\ColorType.cs" />
     <Compile Include="Constants\CursorType.cs" />
+    <Compile Include="Constants\DeleteCharacterFailureType.cs" />
     <Compile Include="Constants\Direction.cs" />
     <Compile Include="Constants\GameCategory.cs" />
     <Compile Include="Constants\Gender.cs" />
