--- a/Ceriyo.Domain.Services.Tests/packages.config
+++ b/Ceriyo.Domain.Services.Tests/packages.config
@@ -3,7 +3,8 @@
   <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="CompareNETObjects" version="3.08.0.0" targetFramework="net461" />
   <package id="FluentValidation" version="7.0.2" targetFramework="net461" />
-  <package id="Moq" version="4.7.10" targetFramework="net461" />
+  <package id="Moq" version="4.7.25" targetFramework="net461" />
   <package id="NUnit" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
 </packages>
