--- a/Ceriyo.Infrastructure.WPF.Tests/packages.config
+++ b/Ceriyo.Infrastructure.WPF.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="CompareNETObjects" version="3.08.0.0" targetFramework="net461" />
-  <package id="Moq" version="4.7.10" targetFramework="net461" />
+  <package id="Moq" version="4.7.25" targetFramework="net461" />
   <package id="NUnit" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
 </packages>
