--- a/Ceriyo.Server.WPF.Tests/packages.config
+++ b/Ceriyo.Server.WPF.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="CompareNETObjects" version="3.08.0.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
-  <package id="Moq" version="4.7.10" targetFramework="net461" />
+  <package id="Moq" version="4.7.25" targetFramework="net461" />
   <package id="NUnit" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
 </packages>
