--- a/Ceriyo.Toolset.WPF.Tests/packages.config
+++ b/Ceriyo.Toolset.WPF.Tests/packages.config
@@ -5,8 +5,9 @@
   <package id="FluentValidation" version="7.0.2" targetFramework="net461" />
   <package id="MonoGame.Extended" version="0.6.377" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
-  <package id="Moq" version="4.7.10" targetFramework="net461" />
+  <package id="Moq" version="4.7.25" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
 </packages>
