--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -20,6 +20,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>..\bin\x86\Debug\Content\Data\ScriptData.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -60,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Attributes\ColorTypeAttribute.cs" />
     <Compile Include="Attributes\FilePathAttribute.cs" />
+    <Compile Include="Attributes\ScriptNamespaceAttribute.cs" />
     <Compile Include="Attributes\SerializationIgnoreAttribute.cs" />
     <Compile Include="Components\CollisionBox.cs" />
     <Compile Include="Components\Description.cs" />
@@ -85,7 +87,6 @@
     <Compile Include="Constants\PacketDeliveryMethod.cs" />
     <Compile Include="Constants\PVPType.cs" />
     <Compile Include="Constants\ResourceType.cs" />
-    <Compile Include="Constants\ScriptEngine.cs" />
     <Compile Include="Constants\ScriptEvent.cs" />
     <Compile Include="Constants\Zoom.cs" />
     <Compile Include="Contracts\IIsoMathService.cs" />
@@ -104,7 +105,9 @@
     <Compile Include="Data\TileData.cs" />
     <Compile Include="Entities\ObjectPainter.cs" />
     <Compile Include="Extensions\EventExtensions.cs" />
+    <Compile Include="Extensions\XmlDocumentationExtensions.cs" />
     <Compile Include="Properties\Annotations1.cs" />
+    <Compile Include="Scripting\ScriptMethod.cs" />
     <Compile Include="Services\IsoMathService.cs" />
     <Compile Include="Observables\ObservablePair.cs" />
     <Compile Include="Data\SerializedFileData.cs" />
