--- a/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
+++ b/Ceriyo.Domain.Services/Ceriyo.Domain.Services.csproj
@@ -45,8 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataServices\AreaDomainService.cs" />
-    <Compile Include="DataServices\Contracts\IAreaDomainService.cs" />
+    <Compile Include="DataServices\DataDomainService.cs" />
+    <Compile Include="DataServices\Contracts\IDataDomainService.cs" />
     <Compile Include="DataServices\Contracts\IDataEditorDomainService.cs" />
     <Compile Include="DataServices\Contracts\IResourceEditorDomainService.cs" />
     <Compile Include="DataServices\DataEditorDomainService.cs" />
