--- a/Ceriyo.Toolset.WPF/packages.config
+++ b/Ceriyo.Toolset.WPF/packages.config
@@ -2,10 +2,12 @@
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="net461" />
   <package id="AutoMapper" version="6.1.0" targetFramework="net461" />
+  <package id="AvalonEdit" version="5.0.4" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net461" />
   <package id="FluentValidation" version="7.2.1" targetFramework="net461" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net461" />
