[Game] Added validation to account registration screen.

--- a/Ceriyo.Core.Tests/packages.config
+++ b/Ceriyo.Core.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="EmptyKeysUI_MonoGame" version="3.0.0" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
   <package id="Moq" version="4.7.145" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
 </packages>
