--- a/Ceriyo.Tools.UIGenerator/Ceriyo.Tools.UIGenerator.csproj
+++ b/Ceriyo.Tools.UIGenerator/Ceriyo.Tools.UIGenerator.csproj
@@ -141,6 +141,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Templates\" />
     <Folder Include="UserControls\" />
   </ItemGroup>
   <ItemGroup>
