--- a/Ceriyo.Domain.Services.Tests/packages.config
+++ b/Ceriyo.Domain.Services.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="CompareNETObjects" version="4.00.0.0" targetFramework="net461" />
   <package id="FluentValidation" version="7.2.1" targetFramework="net461" />
   <package id="Moq" version="4.7.145" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
