--- a/Ceriyo.Infrastructure.WPF.Tests/packages.config
+++ b/Ceriyo.Infrastructure.WPF.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="CompareNETObjects" version="4.00.0.0" targetFramework="net461" />
   <package id="Moq" version="4.7.145" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
 </packages>
