--- a/Ceriyo.Infrastructure.WPF/packages.config
+++ b/Ceriyo.Infrastructure.WPF/packages.config
@@ -6,6 +6,7 @@
   <package id="FluentValidation" version="7.2.1" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
 </packages>
