--- a/Ceriyo.Infrastructure/packages.config
+++ b/Ceriyo.Infrastructure/packages.config
@@ -7,6 +7,7 @@
   <package id="Lidgren.Network" version="1.0.2" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NLua" version="1.3.2.1" targetFramework="net461" />
   <package id="protobuf-net" version="2.3.2" targetFramework="net461" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net461" />
