--- a/Ceriyo.Testing.Shared/packages.config
+++ b/Ceriyo.Testing.Shared/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CompareNETObjects" version="4.00.0.0" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
