[Master Server] Added ResendVerification end point. [Client] Added Account Help section. Added functionality to request verification code again.

--- a/Ceriyo.Master.Server/Ceriyo.Master.Server.csproj
+++ b/Ceriyo.Master.Server/Ceriyo.Master.Server.csproj
@@ -292,6 +292,7 @@
     <Compile Include="Models\Authentication\BindingModels\RegisterBindingModel.cs" />
     <Compile Include="Models\Authentication\BindingModels\RegisterExternalBindingModel.cs" />
     <Compile Include="Models\Authentication\BindingModels\RemoveLoginBindingModel.cs" />
+    <Compile Include="Models\Authentication\BindingModels\ResendVerificationBindingModel.cs" />
     <Compile Include="Models\Authentication\BindingModels\SetPasswordBindingModel.cs" />
     <Compile Include="Models\Authentication\ViewModels\ExternalLoginViewModel.cs" />
     <Compile Include="Models\Authentication\ViewModels\ManageInfoViewModel.cs" />
