--- a/Ceriyo.Infrastructure.UI/Ceriyo.Infrastructure.UI.csproj
+++ b/Ceriyo.Infrastructure.UI/Ceriyo.Infrastructure.UI.csproj
@@ -93,6 +93,8 @@
     <Compile Include="Contracts\IUIService.cs" />
     <Compile Include="Generated\Dictionary.xaml.cs" />
     <Compile Include="Generated\Dictionary.xaml_bindings.cs" />
+    <Compile Include="Generated\Views\AccountHelpView.xaml.cs" />
+    <Compile Include="Generated\Views\AccountHelpView.xaml_bindings.cs" />
     <Compile Include="Generated\Views\CharacterCreationView.xaml.cs" />
     <Compile Include="Generated\Views\CharacterCreationView.xaml_bindings.cs" />
     <Compile Include="Generated\Views\CharacterSelectionView.xaml.cs" />
@@ -115,6 +117,7 @@
     <Compile Include="Generated\Views\SettingsView.xaml_bindings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIService.cs" />
+    <Compile Include="ViewModels\AccountHelpUIViewModel.cs" />
     <Compile Include="ViewModels\CharacterCreationUIViewModel.cs" />
     <Compile Include="ViewModels\CharacterSelectionUIViewModel.cs" />
     <Compile Include="ViewModels\DirectConnectUIViewModel.cs" />
@@ -124,6 +127,7 @@
     <Compile Include="ViewModels\MainMenuUIViewModel.cs" />
     <Compile Include="ViewModels\RegisterUIViewModel.cs" />
     <Compile Include="ViewModels\SettingsUIViewModel.cs" />
+    <Compile Include="ViewModels\Validation\AccountHelpUIViewModelValidator.cs" />
     <Compile Include="ViewModels\Validation\LoginUIViewModelValidator.cs" />
     <Compile Include="ViewModels\Validation\RegisterUIViewModelValidator.cs" />
     <Compile Include="Views\HotBarControl.xaml.cs">
@@ -197,6 +201,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\JoinServerView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\AccountHelpView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
