Created master server database script for easy recreation.

--- a/Ceriyo.Master.Server/Ceriyo.Master.Server.csproj
+++ b/Ceriyo.Master.Server/Ceriyo.Master.Server.csproj
@@ -308,6 +308,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="Database\ceriyo-master-server_2018-01-24.sql" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
