--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,10 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 /.vs/slnx.sqlite
+/.vs/Ceriyo/v15/Server/sqlite3/storage.ide-wal
+/.vs/Ceriyo/v15/Server/sqlite3/storage.ide-shm
+/.vs/Ceriyo/v15/Server/sqlite3/storage.ide
+/.vs/Ceriyo/v15/Server/sqlite3/db.lock
+/.vs/Ceriyo/v15/sqlite3/db.lock
+/.vs/Ceriyo/v15/sqlite3/storage.ide-wal
+/.vs/Ceriyo/v15/sqlite3/storage.ide-shm
